# jobai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatDock.tsx  QABadge.test.tsx  QABadge.tsx  SettingsModal.tsx  Shell.tsx  TailorButton.test.tsx  TailorButton.tsx  TailorFromUrlDialog.test.tsx  TailorFromUrlDialog.tsx  TailorStatusPill.test.tsx  TailorStatusPill.tsx
frontend/src/lib/: api.ts  types.ts  useTailorRuns.test.tsx  useTailorRuns.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  ContextPage.test.tsx  ContextPage.tsx  JobDetailPage.tsx  JobsListPage.tsx  TailorRunsPage.test.tsx  TailorRunsPage.tsx
frontend/src/test/: queryClient.tsx  setup.ts
jobai/: __init__.py  cli.py  config.py  scheduler.py
jobai/agent/: __init__.py  client.py  conversations.py  loop.py  prompts.py  subscription_loop.py  tools.py
jobai/api/: __init__.py  dependencies.py  models.py  repository.py  runtime_settings.py  server.py
jobai/api/routes/: __init__.py  agent.py  context.py  conversations.py  health.py  jobs.py  notifications.py  settings.py  sources.py  tailor.py
jobai/context/: __init__.py  client.py
jobai/db/: __init__.py  connection.py  migrations.py
jobai/db/migrations/: 0001_initial.sql  0002_conversations.sql  0003_field_stats.sql  0004_app_settings.sql  0005_tailor_runs.sql  0006_tailor_runs_qa.sql  0007_tailor_runs_url.sql  0008_tailor_runs_qa_retry.sql  0009_tailor_runs_filenames.sql  0010_tailor_runs_applied_at.sql  0011_tailor_runs_resume_qa.sql  __init__.py
jobai/dedup/: __init__.py  best_of.py  fuzzy.py  hashing.py  promote.py  reconcile.py
jobai/fetcher/: __init__.py  base.py  browser.py  dispatch.py  escalation.py  http.py  ratelimit.py  recording.py  retry.py  stealth.py
jobai/observability/: __init__.py  logging.py
jobai/pipeline/: __init__.py  description_backfill.py  posted_at_normalisation.py  remote_inference.py  runner.py  salary_inference.py  schema_change.py
jobai/sources/: __init__.py  apsjobs.py  ashby.py  ats_discovery.py  base.py  companies.yaml  eightfold_detail.py  greenhouse.py  indeed.py  lever.py  linkedin.py  linkedin_detail.py  loader.py  nsw_iworkfor.py  qld_smartjobs.py  registry.py  repository.py  sa_iworkfor.py  seek.py  seek_detail.py  smartrecruiters.py  vic_careers.py  wa_jobs.py  workable.py
jobai/tailor/: __init__.py  client.py  filenames.py  jd_resolution.py  layout_check.py  models.py  orchestrator.py  qa.py  repository.py  snapshot.py  worker.py
scripts/: commit_overnight_work.sh
tests/: conftest.py  test_package.py
tests/unit/: test_cli.py  test_config.py  test_scheduler.py
tests/unit/agent/: test_client.py  test_conversations.py  test_loop.py  test_prompts.py  test_subscription_loop.py  test_tools.py
tests/unit/api/: conftest.py  test_agent.py  test_context_routes.py  test_conversations.py  test_health.py  test_jobs.py  test_lifespan.py  test_notifications.py  test_runtime_settings.py  test_settings_routes.py  test_sources.py  test_spa_fallback.py  test_tailor_routes.py
tests/unit/context/: test_client.py
tests/unit/db/: test_connection.py  test_migrations.py
tests/unit/dedup/: test_best_of.py  test_fuzzy.py  test_hashing.py  test_promote.py  test_reconcile.py
tests/unit/fetcher/: test_base.py  test_browser.py  test_dispatch.py  test_escalation.py  test_http.py  test_ratelimit.py  test_recording.py  test_retry.py  test_stealth.py
tests/unit/observability/: test_logging.py
tests/unit/pipeline/: test_description_backfill.py  test_posted_at_normalisation.py  test_remote_inference.py  test_runner.py  test_salary_inference.py  test_schema_change.py
tests/unit/sources/: _browser_fakes.py  test_apsjobs.py  test_ashby.py  test_ats_discovery.py  test_base.py  test_eightfold_detail.py  test_greenhouse.py  test_indeed.py  test_lever.py  test_linkedin.py  test_linkedin_detail.py  test_loader.py  test_nsw_iworkfor.py  test_qld_smartjobs.py  test_registry.py  test_repository.py  test_sa_iworkfor.py  test_seek.py  test_seek_detail.py  test_smartrecruiters.py  test_vic_careers.py  test_wa_jobs.py  test_workable.py
tests/unit/sources/fixtures/: apsjobs_aura_empty.json  apsjobs_aura_page1.json  apsjobs_aura_page2.json  apsjobs_bootstrap.html  apsjobs_software.atom  ashby_linear.json  greenhouse_atlassian.json  indeed_python_au.html  indeed_python_melbourne.html  lever_palantir.json  linkedin_guest_chunk_au.html  linkedin_python_au.html  nsw_iworkfor.html  qld_smartjobs.html  sa_iworkfor.html  seek_python_au.html  seek_python_melbourne.html  smartrecruiters_visa_detail.json  smartrecruiters_visa_listing.json  vic_careers.html  wa_jobs.html  workable_huggingface.json
tests/unit/tailor/: __init__.py  conftest.py  test_client.py  test_jd_resolution.py  test_layout_check.py  test_models.py  test_orchestrator.py  test_qa.py  test_repository.py  test_snapshot.py  test_worker.py
