[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobai"
version = "1.0.5"
description = "Local-first AI job-hunting agent: multi-source ingestion, deduplication, search API, and a conversational AI layer."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jonathan Duketis" }]
requires-python = ">=3.12"
keywords = ["jobs", "scraping", "ai", "agent", "fastapi", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx[http2]>=0.27,<1.0",
  "selectolax>=0.3.21",
  "pydantic>=2.5,<3.0",
  "pydantic-settings>=2.1,<3.0",
  "structlog>=24.1",
  "typer>=0.12,<1.0",
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27",
  "apscheduler>=3.10,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "playwright>=1.42",
  "patchright>=1.42",
  "rapidfuzz>=3.6",
  "pyyaml>=6.0",
  "anthropic>=0.40",
  "claude-agent-sdk>=0.1",
  "sse-starlette>=2.0",
  "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pytest-mock>=3.12",
  "respx>=0.20",
  "mypy>=1.8",
  "ruff>=0.3",
  "types-pyyaml",
  "pre-commit>=3.6",
]

[project.scripts]
jobai = "jobai.cli:app"

[project.urls]
Repository = "https://github.com/duketis/jobai"
Issues = "https://github.com/duketis/jobai/issues"

[tool.setuptools.packages.find]
include = ["jobai*"]
exclude = ["tests*", "_private*"]

[tool.setuptools.package-data]
jobai = ["py.typed", "db/*.sql", "db/migrations/*.sql"]

# ---------------------------------------------------------------------------
# Ruff — lint and format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["_private", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "S",      # flake8-bandit
  "BLE",    # flake8-blind-except
  "RET",    # flake8-return
  "SIM",    # flake8-simplify
  "PTH",    # flake8-use-pathlib
  "PL",     # pylint
  "TRY",    # tryceratops
  "ASYNC",  # flake8-async
  "RUF",    # ruff-specific
]
ignore = [
  "PLR0913",  # too many args (sometimes intentional)
  "TRY003",   # long exception messages
  "PLR2004",  # magic numbers (handled per-file in tests)
  # En-dash/em-dash unicode chars are intentional throughout this
  # repo - in prose (CLAUDE.md style), in scraped job listings, and
  # in regex patterns that have to accept what real boards write.
  "RUF001",   # ambiguous unicode in string literals
  "RUF002",   # ambiguous unicode in docstrings
  "RUF003",   # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ANN", "PLR0915"]

[tool.ruff.lint.flake8-bugbear]
# Typer's idiomatic pattern is `param: T = typer.Option(...)` in argument
# defaults. The call returns a marker object, not a stateful value, so the
# usual B008 concerns do not apply.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
ignore_missing_imports = false
show_error_codes = true
pretty = true
files = ["jobai", "tests"]
exclude = ["_private/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = [
  "apscheduler.*",
  "selectolax.*",
  "rapidfuzz.*",
  "patchright.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest — testing
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: integration tests (may touch network or filesystem)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:apscheduler.*",
  # Garbage-collection-time warnings from mixing asyncio.run() (used inside the
  # CLI under test) with pytest-asyncio's own event loop. Not actionable; the
  # underlying resources are cleaned, just not deterministically before GC.
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["jobai"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
